added publish script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description":
     "experiment in building a cli for managing boilerplate react files",
   "main": "index.js",
+  "scripts": {
+    "publich": "npm publish --access=public"
+  },
   "bin": {
     "setup": "bin/setup.js",
     "link-webpack": "bin/linkWebpackConfig.js",
