--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@wyattsweet/bootstrap-react",
-  "version": "0.0.4",
-  "description": "experiment in building a cli for managing boilerplate react files",
+  "version": "0.0.5",
+  "description":
+    "experiment in building a cli for managing boilerplate react files",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,10 +16,7 @@
     "cp-main-html": "bin/cpMainHtml.js",
     "build-react": "bin/build.js"
   },
-  "keywords": [
-    "tooling",
-    "react"
-  ],
+  "keywords": ["tooling", "react"],
   "author": "Wyatt Sweet",
   "license": "ISC",
   "dependencies": {
